Wrapping up before Annie meeting.  Possible some not great UI that is partially fixed.

--- a/src/components/RemoteControl/RemoteControl.css
+++ b/src/components/RemoteControl/RemoteControl.css
@@ -41,6 +41,8 @@
 
 .Portal-group > div {
     flex-grow: 1;
+    display: flex;
+    justify-content: center;
 }
 
 @media only screen and (max-width: 400px) {
